# mado

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix  result
module/: default.nix
shell-integration/: mado.bash  mado.fish  mado.zsh
src/: clipboard_store.rs  config.rs  keybind.rs  main.rs  mcp.rs  osc_1337.rs  pane.rs  platform.rs  pointer_shape.rs  prompt_mark.rs  pty.rs  render.rs  scripting.rs  search.rs  selection.rs  tab.rs  term_spec.rs  terminal.rs  theme.rs  url.rs  window.rs
