[package]
name = "mado"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Mado (窓) — GPU-rendered terminal emulator following Ghostty's philosophy"
homepage = "https://github.com/pleme-io/mado"
repository = "https://github.com/pleme-io/mado"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/mado"
categories = ["command-line-utilities"]
keywords = ["terminal", "emulator", "gpu", "wgpu", "vte"]
publish = true

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
shidou = { git = "https://github.com/pleme-io/shidou" }
garasu = { git = "https://github.com/pleme-io/garasu" }
madori = { git = "https://github.com/pleme-io/madori" }
shikumi = { git = "https://github.com/pleme-io/shikumi" }
hasami = { git = "https://github.com/pleme-io/hasami" }
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }
kaname = { git = "https://github.com/pleme-io/kaname" }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"

# GPU rendering (via garasu, but needed for direct wgpu types in render code)
wgpu = "25"

# Re-export glyphon for text area construction
glyphon = "0.9"

# Terminal emulation
vte = "0.15"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
dirs = "6.0"

# GPU data upload
bytemuck = { version = "1", features = ["derive"] }

# Unicode support
unicode-width = "0.2"

# Battle-tested replacements for hand-rolled implementations
data-encoding = "2"
linkify = "0.10"
open = "5"

# Image decoding for Kitty graphics protocol
image = { version = "0.25", default-features = false, features = ["png"] }

# PTY and process management
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "net"] }
libc = "0.2"

# macOS platform integration (safe Rust wrappers for Cocoa APIs)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSUserDefaults"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSDockTile", "NSResponder"] }

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"

[patch."https://github.com/pleme-io/madori"]
madori = { path = "../madori" }

[patch."https://github.com/pleme-io/shidou"]
shidou = { path = "../shidou" }
